--- a/scripts/docker-files/db_proxy/Dockerfile
+++ b/scripts/docker-files/db_proxy/Dockerfile
@@ -10,6 +10,6 @@ RUN git clone https://github.com/aiman-al-masoud/translator-cloud-project.git
 WORKDIR translator-cloud-project
 RUN git pull
 RUN apt install default-libmysqlclient-dev -y
-RUN pip3.10 install -r requirements.txt
+RUN pip3.10 install -r requirements_DB_proxy.txt
 WORKDIR src/db_proxy
 ENTRYPOINT python3 -m flask run --host=0.0.0.0 --port=8080
