translate models added

--- a/scripts/docker-files/translate/Dockerfile
+++ b/scripts/docker-files/translate/Dockerfile
@@ -12,5 +12,8 @@ RUN git pull
 RUN apt install default-libmysqlclient-dev -y
 RUN pip3.10 install flask
 RUN pip3.10 install argostranslate
-WORKDIR src/translate
+WORKDIR script
+RUN python3 install-language-models.py -f it -t en -txt "Ciao Mondo"
+RUN python3 install-language-models.py -f en -t it -txt "Hello World"
+WORKDIR ../src/translate
 ENTRYPOINT python3 -m flask run --host=0.0.0.0 --port=8081
