translate models added

--- a/scripts/docker-files/translate/Dockerfile
+++ b/scripts/docker-files/translate/Dockerfile
@@ -12,7 +12,7 @@ RUN git pull
 RUN apt install default-libmysqlclient-dev -y
 RUN pip3.10 install flask
 RUN pip3.10 install argostranslate
-WORKDIR script
+WORKDIR scripts
 RUN python3 install-language-models.py -f it -t en -txt "Ciao Mondo"
 RUN python3 install-language-models.py -f en -t it -txt "Hello World"
 WORKDIR ../src/translate
