--- a/.github/workflows/S3-translator-website.yml
+++ b/.github/workflows/S3-translator-website.yml
@@ -13,10 +13,10 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@master
         
-        - name: Deploy
-          uses: reggionick/s3-deploy@v3
+        - name: Deploy to s3
+          uses: nosuchmoduleerror/translator-cloud-project@master
           with:
             folder: src/website
             bucket: ${{ secrets.S3_BUCKET }}
