--- a/.github/workflows/S3-translator-website.yml
+++ b/.github/workflows/S3-translator-website.yml
@@ -19,7 +19,7 @@ jobs:
         - name: S3 Deploy
           uses: Reggionick/s3-deploy@v4.0.0
           with:
-            folder: /
+            folder: ./src/website
             bucket: ${{ secrets.S3_BUCKET }}
             bucket-region: ${{ secrets.S3_BUCKET_REGION }}
             dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
