health check testing

--- a/scripts/docker-files/translate/Dockerfile
+++ b/scripts/docker-files/translate/Dockerfile
@@ -12,6 +12,7 @@ RUN git pull
 RUN pip3.10 install flask
 RUN pip3.10 install argostranslate
 RUN pip3.10 install flask_cors
+RUN pip3.10 install jsonify
 WORKDIR scripts
 RUN python3 install-language-models.py -f it -t en -txt "Ciao Mondo"
 RUN python3 install-language-models.py -f en -t it -txt "Hello World"
