Update and rename ec2-translator-server.yml to translator-to-ECR.yml

--- a/.github/workflows/translator-to-ECR.yml
+++ b/.github/workflows/translator-to-ECR.yml
@@ -25,7 +25,7 @@ jobs:
         path: src/
 
     - name: Build Docker image
-      id: build translator image
+      id: build-translator-image
       run: |
         docker build -t translator-container .
         docker save translator-container > /tmp/translator-container.tar
